force-app/main/default/objects/Approval_Hierarchy__c/Approval_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Represents the hierarchy levels, approvers for an account owner or custom hierarchy for CPQ and CLM workflows</description>
    <label>Approval Hierarchy</label>
    <nameField>
        <label>Approval Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Hierarchies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>