force-app/main/default/objects/Approval_Hierarchy__c/fields/Approval_Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Type__c</fullName>
    <description>Approval Hierarchy Type values.</description>
    <label>Approval Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CLM_Custom_Hierarchy</fullName>
                <label>CLM Custom Hierarchy</label>
            </value>
            <value>
                <fullName>CLM_Sales_Hierarchy</fullName>
                <label>CLM Sales Hierarchy</label>
            </value>
            <value>
                <fullName>CPQ_Custom_Hierarchy</fullName>
                <label>CPQ Custom Hierarchy</label>
            </value>
            <value>
                <fullName>CPQ_Sales_Hierarchy</fullName>
                <label>CPQ Sales Hierarchy</label>
            </value>
            <value>
                <fullName>Discount</fullName>
                <isActive>false</isActive>
                <label>Discount</label>
            </value>
            <value>
                <fullName>Material_Class</fullName>
                <isActive>false</isActive>
                <label>Material Class</label>
            </value>
            <value>
                <fullName>Post_Pricing_Message</fullName>
                <label>Post Pricing Message</label>
            </value>
            <value>
                <fullName>Product</fullName>
                <isActive>false</isActive>
                <label>Product</label>
            </value>
            <value>
                <fullName>Product_Category</fullName>
                <isActive>false</isActive>
                <label>Product Category</label>
            </value>
            <value>
                <fullName>Product_Group</fullName>
                <isActive>false</isActive>
                <label>Product Group</label>
            </value>
            <value>
                <fullName>Product_Line</fullName>
                <isActive>false</isActive>
                <label>Product Line</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Standing_Discount</fullName>
                <isActive>false</isActive>
                <label>Standing Discount</label>
            </value>
            <value>
                <fullName>Standing_Material_Group_1</fullName>
                <isActive>false</isActive>
                <label>Standing Material Group 1</label>
            </value>
            <value>
                <fullName>Standing_Material_Number</fullName>
                <isActive>false</isActive>
                <label>Standing Material Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>