force-app/main/default/objects/Approval_Hierarchy__c/fields/Approver_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_1__c</fullName>
    <description>This field denotes level 1 approval user.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (Level 1)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>