force-app/main/default/objects/Approval_Hierarchy__c/fields/Approver_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_2__c</fullName>
    <description>This field denotes level 2 approval user.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (Level 2)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Hierarchies1</relationshipName>
    <type>Lookup</type>
</CustomField>