force-app/main/default/objects/Approval_Hierarchy__c/fields/Approver_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_3__c</fullName>
    <description>This field denotes level 3 approval user.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (Level 3)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Hierarchies2</relationshipName>
    <type>Lookup</type>
</CustomField>