force-app/main/default/objects/Approval_Hierarchy__c/listViews/All_CPQ_Sales.listView-meta.xml
<ListView>
    <fullName>All_CPQ_Sales</fullName>
    <columns>NAME</columns>
    <columns>Approval_Hierarchy_Type__c</columns>
    <columns>Approver_Level_1__c</columns>
    <columns>Approver_Level_2__c</columns>
    <columns>Approver_Level_3__c</columns>
    <columns>Approver_Level_4__c</columns>
    <columns>Approver_Level_5__c</columns>
    <columns>Approver_Level_6__c</columns>
    <columns>Approver_Level_7__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All - CPQ Sales</label>
</ListView>