force-app/main/default/objects/Approval_Hierarchy__c/listViews/China_All_Hierarchies.listView-meta.xml
<ListView>
    <fullName>China_All_Hierarchies</fullName>
    <columns>NAME</columns>
    <columns>Approval_Hierarchy_Type__c</columns>
    <columns>Approver_Level_1__c</columns>
    <columns>Approver_Level_2__c</columns>
    <columns>Approver_Level_3__c</columns>
    <columns>Approver_Level_4__c</columns>
    <columns>Approver_Level_5__c</columns>
    <columns>Approver_Level_6__c</columns>
    <columns>Approver_Level_7__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>China</value>
    </filters>
    <label>China - All Hierarchies</label>
</ListView>